# MusicTL

./: CMakeLists.txt
src/: MainWindow.cpp  MainWindow.h  main.cpp  style.qss
src/styles/: scrollBar.qss  style.qss
src/ui/: Content.cpp  Content.h  FlowLayout.cpp  FlowLayout.h  Player.cpp  Player.h  Settings.cpp  Settings.h  TierList.cpp  TierList.h
